[package]
name = "uncrackable"
version = "0.1.0"
edition = "2021"
authors = ["KameleoN"]
description = "Library for generating random, personalized passwords"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"